--- a/resources/scss/components/__index.scss
+++ b/resources/scss/components/__index.scss
@@ -36,7 +36,7 @@
 @import "nav-pagination";
 @import "nav-toggle";
 @import "notices";
-// @import "page-builder";
+@import "page-builder";
 @import "page-head";
 @import "post-list";
 @import "post-nav";
