--- a/resources/scss/components/_nav-toggle.scss
+++ b/resources/scss/components/_nav-toggle.scss
@@ -8,8 +8,8 @@
 
 $toggle-width: 30px;
 $toggle-height: 3px;
-$toggle-color: $green-dark;
-$toggle-color-active: $green-dark;
+$toggle-color: $white;
+$toggle-color-active: $white;
 
 .toggle-menu {
   display: flex;
