--- a/resources/scss/components/_app-content.scss
+++ b/resources/scss/components/_app-content.scss
@@ -11,9 +11,19 @@
 .app-content {
   margin: 0 auto;
   padding: 0;
-  padding-top: $app-header-height;
+  // padding-top: $app-header-height;
 
   @include mq(mobile-nav) {
-        padding-top: $app-header-height-mobile;
-    }
+        //padding-top: $app-header-height-mobile;
+  }
+
+  &:after {
+    position: absolute;
+    content: "";
+    top: 0;
+    left: 0;
+    height: convert(230);
+    width: 100%;
+    background: linear-gradient(180deg, rgba(0, 4, 7, 0.65) 0%, rgba(60, 71, 82, 0.47) 44.27%, rgba(217, 217, 217, 0) 100%);
+  }
 }
