--- a/resources/scss/components/_app-header.scss
+++ b/resources/scss/components/_app-header.scss
@@ -3,7 +3,7 @@
 //
 
 .app-header {
-    background-color: $header-background;
+    background-color: transparent;
     height: $app-header-height;
     width: 100%;
     position: absolute;
@@ -14,8 +14,22 @@
     flex-flow: row wrap;
     justify-content: space-between;
     align-items: center;
-    box-shadow: 0 0 4px 0 rgba($black, 0.17);
+    // box-shadow: 0 0 4px 0 rgba($black, 0.17);
     padding: 0 ($margin * .5);
+    /* Rectangle 1 */
+    transition: all .3s ease-in-out;
+
+    &:before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        height: 100%;
+        width: 100%;
+        background-color: rgba($header-background, .9);
+        opacity: 0;
+    }
+
 
     @include mq(mobile-nav) {
         height: $app-header-height-mobile;
@@ -31,24 +45,26 @@
 
     .detached & {
         height: $app-header-height-mobile;
-
+       
         @include mq(desktop-nav) {
             position: fixed;
             transition: all .5s;
             top: 0;
             border-bottom: none;
         }
+
+        &:before {
+            opacity: 1;
+        }
     }
 
     .admin-bar & {
         top: 46px;
-
         @include mq(wpadmin-desktop) {
             top: 32px;
         }
-
         @include mq(phone-only) {
-            top: 0;
+            //top: 0;
         }
     }
 
@@ -64,9 +80,9 @@
         }
     }
 
-    .expressbar-open.detached & {
+    .expressbar-open.detached & { // need to remove all expressbar code from theme
         @include mq(wpadmin-desktop) {
-            top: 4.5em;
+          // top: 4.5em;
         }
     }
 
@@ -79,6 +95,7 @@
         justify-content: flex-start;
         flex: 0 1 $branding-width;
         //background-color: $blue-darker;
+        z-index: 10;
 
         .detached & {
             .app-header__branding-link {
@@ -94,10 +111,10 @@
 
         @include mq(mobile-nav) {
             flex-basis: $branding-width-mobile;
-            width: $branding-width-mobile;
-            padding: $margin * .25;
+            //width: $branding-width-mobile;
+            //padding: $margin * .25;
             position: relative;
-            left: $margin * .5;
+            //left: $margin * .5;
         }
 
         &-link {
@@ -116,6 +133,7 @@
                 height: $logo-height-mobile;
                 transition: all .3s ease-in-out;
                 fill: $blue-dark;
+                transform: scale(.9);
 
                 @include mq(tablet-landscape-up) {
                     width: $logo-width;
