--- a/resources/scss/settings/_fonts.scss
+++ b/resources/scss/settings/_fonts.scss
@@ -16,29 +16,76 @@ $fontURI: '../../dist/fonts';
     font-style: normal;
 
 }
-
+/* archivo-regular - latin */
 @font-face {
-    font-family: 'Amsi Pro';
-    src: url('#{$fontURI}/amsipro/amsipronormal-italic-webfont.woff2') format('woff2'),
-         url('#{$fontURI}/amsipro/amsipronormal-italic-webfont.woff') format('woff');
-    font-weight: normal;
-    font-style: italic;
-
+  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+  font-family: 'Archivo';
+  font-style: normal;
+  font-weight: 400;
+  src: url('#{$fontURI}/archivo/archivo-v18-latin-regular.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+}
+/* archivo-italic - latin */
+@font-face {
+  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+  font-family: 'Archivo';
+  font-style: italic;
+  font-weight: 400;
+  src: url('#{$fontURI}/archivo/archivo-v18-latin-italic.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+}
+/* archivo-500 - latin */
+@font-face {
+  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+  font-family: 'Archivo';
+  font-style: normal;
+  font-weight: 500;
+  src: url('#{$fontURI}/archivo/archivo-v18-latin-500.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+}
+/* archivo-600 - latin */
+@font-face {
+  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+  font-family: 'Archivo';
+  font-style: normal;
+  font-weight: 600;
+  src: url('#{$fontURI}/archivo/archivo-v18-latin-600.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+}
+/* archivo-700 - latin */
+@font-face {
+  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+  font-family: 'Archivo';
+  font-style: normal;
+  font-weight: 700;
+  src: url('#{$fontURI}/archivo/archivo-v18-latin-700.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+}
+/* archivo-700italic - latin */
+@font-face {
+  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+  font-family: 'Archivo';
+  font-style: italic;
+  font-weight: 700;
+  src: url('#{$fontURI}/archivo/archivo-v18-latin-700italic.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
 
+/* archivo-narrow-regular - latin */
 @font-face {
-    font-family: 'Amsi Pro';
-    src: url('#{$fontURI}/amsipro/amsipronormal-bold-webfont.woff2') format('woff2'),
-         url('#{$fontURI}/amsipro/amsipronormal-bold-webfont.woff') format('woff');
-    font-weight: 700;
-    font-style: normal;
+  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+  font-family: 'Archivo Narrow';
+  font-style: normal;
+  font-weight: 400;
+  src: url('#{$fontURI}/archivo-narrow/archivo-narrow-v29-latin-regular.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
-
-
+/* archivo-narrow-600 - latin */
 @font-face {
-    font-family: 'Amsi Pro';
-    src: url('#{$fontURI}/amsipro/amsipronormal-semibold-webfont.woff2') format('woff2'),
-         url('#{$fontURI}/amsipro/amsipronormal-seimibold-webfont.woff') format('woff');
-    font-weight: 600;
-    font-style: normal;
+  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+  font-family: 'Archivo Narrow';
+  font-style: normal;
+  font-weight: 600;
+  src: url('#{$fontURI}/archivo-narrow/archivo-narrow-v29-latin-600.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+}
+/* archivo-narrow-700 - latin */
+@font-face {
+  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+  font-family: 'Archivo Narrow';
+  font-style: normal;
+  font-weight: 700;
+  src: url('#{$fontURI}/archivo-narrow/archivo-narrow-v29-latin-700.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
