--- a/resources/scss/settings/_fonts.scss
+++ b/resources/scss/settings/_fonts.scss
@@ -8,48 +8,37 @@
 
 $fontURI: '../../dist/fonts';
 
-/* space-grotesk-regular - latin */
-/* space-grotesk-regular - latin */
 @font-face {
-  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
-  font-family: 'Space Grotesk';
-  font-style: normal;
-  font-weight: 400;
-  src: url('#{$fontURI}/space-grotesk/space-grotesk-v15-latin-regular.woff2') format('woff2'), /* Chrome 36+, Opera 23+, Firefox 39+ */
-       url('#{$fontURI}/space-grotesk/space-grotesk-v15-latin-regular.woff') format('woff'); /* Chrome 5+, Firefox 3.6+, IE 9+, Safari 5.1+ */
-}
-/* space-grotesk-500 - latin */
-@font-face {
-  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
-  font-family: 'Space Grotesk';
-  font-style: normal;
-  font-weight: 500;
-  src: url('#{$fontURI}/space-grotesk/space-grotesk-v15-latin-500.woff2') format('woff2'), /* Chrome 36+, Opera 23+, Firefox 39+ */
-       url('#{$fontURI}/space-grotesk/space-grotesk-v15-latin-500.woff') format('woff'); /* Chrome 5+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+    font-family: 'Amsi Pro';
+    src: url('#{$fontURI}/amsipro/amsipronormal-regular-webfont.woff2') format('woff2'),
+         url('#{$fontURI}/amsipro/amsipronormal-regular-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
 }
 
 @font-face {
-  font-family: 'Inter';
-  font-style:  normal;
-  font-weight: 300;
-  font-display: swap;
-  src: url("#{$fontURI}/inter/Inter-Light.woff2") format("woff2"),
-       url("#{$fontURI}/inter/Inter-Light.woff") format("woff");
-}
-@font-face {
-  font-family: 'Inter';
-  font-style:  italic;
-  font-weight: 300;
-  font-display: swap;
-  src: url("#{$fontURI}/inter/Inter-LightItalic.woff2") format("woff2"),
-       url("#{$fontURI}/inter/Inter-LightItalic.woff") format("woff");
+    font-family: 'Amsi Pro';
+    src: url('#{$fontURI}/amsipro/amsipronormal-italic-webfont.woff2') format('woff2'),
+         url('#{$fontURI}/amsipro/amsipronormal-italic-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: italic;
+
 }
 
 @font-face {
-  font-family: 'Inter';
-  font-style:  normal;
-  font-weight: 700;
-  font-display: swap;
-  src: url("#{$fontURI}/inter/Inter-Bold.woff2") format("woff2"),
-       url("#{$fontURI}/inter/Inter-Bold.woff") format("woff");
+    font-family: 'Amsi Pro';
+    src: url('#{$fontURI}/amsipro/amsipronormal-bold-webfont.woff2') format('woff2'),
+         url('#{$fontURI}/amsipro/amsipronormal-bold-webfont.woff') format('woff');
+    font-weight: 700;
+    font-style: normal;
+}
+
+
+@font-face {
+    font-family: 'Amsi Pro';
+    src: url('#{$fontURI}/amsipro/amsipronormal-semibold-webfont.woff2') format('woff2'),
+         url('#{$fontURI}/amsipro/amsipronormal-seimibold-webfont.woff') format('woff');
+    font-weight: 600;
+    font-style: normal;
 }
