Start to template heirarchy system

--- a/resources/scss/settings/_type.scss
+++ b/resources/scss/settings/_type.scss
@@ -1,4 +1,4 @@
-$font-family:     "Amsi Pro", sans-serif;
+$font-family:     Helvetica, Arial, sans-serif;
 $alt-font-family: $font-family;
 
 //$med-font-family:			'acherusgrotesque-medium', sans-serif;
